--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,7 @@ dependencyResolutionManagement {
 rootProject.name = "AndroidShow"
 // ---- 组合Module ------
 include ':app'
-include ':onionui'
+include ':app-ui'
 // ------------------------------------------------------------------------
 // 复合构建 https://docs.gradle.org/current/userguide/composite_builds.html
 // 1. 合并通常独立开发的构建，例如在应用程序使用的库中尝试错误修复时
@@ -19,5 +19,5 @@ include ':onionui'
 // ------------------------------------------------------------------------
 //includeBuild 'versionPlugin'
 include ':common-ui'
-includeBuild("versionPlugin")
 include ':tutorial-java'
+includeBuild("version-plugin")
