--- a/app-ui/src/main/AndroidManifest.xml
+++ b/app-ui/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:name=".material.MaterialShowActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.act.FragmentContainerActivity"
+            android:exported="false" />
+        <activity
             android:name=".telegram.LaunchActivity"
             android:exported="false" />
         <activity
